<resources>
    <string name="app_name">Cinema.App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="sports">Sports</string>
    <string name="release_data">Release data</string>
    <string name="revenue">Revenue:</string>
    <string name="budget">Budget:</string>
    <string name="time">Time:</string>
    <string name="min">min</string>
    <string name="scope2">)</string>
    <string name="scope1">(</string>
    <string name="rate">Rate</string>
    <string name="cinematography_is_the_art_of_photography_and_visual_storytelling_in_a_motion_picture_or_television_show_cinematography_comprises_all_on_screen_visual_elements_including_lighting_framing_composition_camera_motion_camera_angles_film_selection_lens_choices_depth_of_field_zoom_focus_color_exposure_and_filtration">Cinematography is the art of photography and visual storytelling in a motion picture or television show. Cinematography comprises all on-screen visual elements, including lighting, framing, composition, camera motion, camera angles, film selection, lens choices, depth of field, zoom, focus, color, exposure, and filtration.</string>
    <string name="favorite">Favorite</string>
    <string name="rating">Rating</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="original_title">Original title</string>
    <string name="original_language">Original language</string>
    <string name="popularity">Popularity</string>
    <string name="rate_count">Rate count</string>
    <string name="genres">Genres</string>
    <string name="vote">Vote</string>
    <string name="slash">/</string>
    <string name="movie_note">Movie note</string>
    <string name="theme">Theme</string>
    <string name="title">Mymov.</string>
</resources>