<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/scrollLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layoutAnimation="@anim/layout_left_to_right">

        <TextView
            android:id="@+id/nowPlayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now_playing"
            android:textSize="30sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nowPlayRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layoutAnimation="@anim/layout_right_to_left"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/comingSoonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upcoming"
            android:textSize="30sp"
            android:layoutAnimation="@anim/layout_left_to_right"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comingSoonRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layoutAnimation="@anim/layout_right_to_left"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/topRatedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/top_rated"
            android:textSize="30sp"
            android:layoutAnimation="@anim/layout_left_to_right"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topRatedRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layoutAnimation="@anim/layout_right_to_left"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/popularTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/popular"
            android:textSize="30sp"
            android:layoutAnimation="@anim/layout_left_to_right"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layoutAnimation="@anim/layout_right_to_left"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </LinearLayout>
</ScrollView>